full-moon/tests/cases/fail/parser/if-3/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/if-3
---
error[ast]: unexpected token `if`. if (expected condition after `if`)
  ┌─ source.lua:1:1
  │
1 │ if local then end
  │ ^^

error[ast]: unexpected token `then`. then (expected either a variable name or `function`)
  ┌─ source.lua:1:10
  │
1 │ if local then end
  │          ^^^^

error[ast]: unexpected token `then`. then (unexpected token, this needs to be a statement)
  ┌─ source.lua:1:10
  │
1 │ if local then end
  │          ^^^^


